--- a/15puzzle/15puzzle.html
+++ b/15puzzle/15puzzle.html
@@ -67,7 +67,7 @@ html, body
 <div id="wrapper">
 	<h1 id="title">15 Puzzle</h1>
 	<div id="main">
-		<center style="margin-bottom:10px">controls:<br>press <span style="color:blue"><b>UP<\b><\span>, <span style="color:blue"><b>DOWN<\b><\span>, <span style="color:blue"><b>LEFT<\b><\span> and <span style="color:blue"><b>RIGHT<\b><\span> to move the tiles around, <span style="color:blue"><b>T<\b><\span> to randomly shuffle the board and <span style="color:blue"><b>R<\b><\span> to reset to the solved position</center>
+		<center style="margin-bottom:10px">controls:<br>press <span style="color:blue"><b>UP</b></span>, <span style="color:blue"><b>DOWN</b></span>, <span style="color:blue"><b>LEFT</b></span> and <span style="color:blue"><b>RIGHT</b></span> to move the tiles around, <span style="color:blue"><b>T</b></span> to randomly shuffle the board and <span style="color:blue"><b>R</b></span> to reset to the solved position</center>
 		<center><canvas id="canvas" width="400" height="400" style="max-width:100%;background:#000;vertical-align:middle"></canvas></center>
 	</div>
 </div>
