--- a/dynamics/dynamics.html
+++ b/dynamics/dynamics.html
@@ -67,7 +67,7 @@ html, body
 <div id="wrapper">
 	<h1 id="title">Second-order dynamics</h1>
 	<div id="main">
-		<center style="margin-bottom:10px">controls:<br>drag the sliders around with <span style="color:blue"><b>LEFT MOUSE<\b><\span></center>
+		<center style="margin-bottom:10px">controls:<br>drag the sliders around with <span style="color:blue"><b>LEFT MOUSE</b></span></center>
 		<center><canvas id="canvas" width="800" height="450" style="max-width:100%;background:#000;vertical-align:middle"></canvas></center>
 	</div>
 </div>
