--- a/neutron/index.html
+++ b/neutron/index.html
@@ -67,7 +67,7 @@ html, body
 <div id="wrapper">
 	<h1 id="title">Neutron</h1>
 	<div id="main">
-		<center style="margin-bottom:10px">controls:<br>drag the pieces or click to select and move them with <span style="color:blue"><b>LEFT MOUSE<\b><\span></center>
+		<center style="margin-bottom:10px">controls:<br>drag the pieces or click to select and move them with <span style="color:blue"><b>LEFT MOUSE</b></span></center>
 		<center><canvas id="canvas" width="480" height="640" style="max-width:100%;background:#000;vertical-align:middle"></canvas></center>
 	</div>
 </div>
