--- a/words/index.html
+++ b/words/index.html
@@ -67,7 +67,7 @@ html, body
 <div id="wrapper">
 	<h1 id="title">Words</h1>
 	<div id="main">
-		<center style="margin-bottom:10px">controls:<br>click the tiles with <span style="color:blue"><b>LEFT MOUSE<\b><\span> or press <span style="color:blue"><b>Q<\b><\span>, <span style="color:blue"><b>W<\b><\span>, <span style="color:blue"><b>A<\b><\span> and <span style="color:blue"><b>S<\b><\span> to toggle the respective letters</center>
+		<center style="margin-bottom:10px">controls:<br>click the tiles with <span style="color:blue"><b>LEFT MOUSE</b></span> or press <span style="color:blue"><b>Q</b></span>, <span style="color:blue"><b>W</b></span>, <span style="color:blue"><b>A</b></span> and <span style="color:blue"><b>S</b></span> to toggle the respective letters</center>
 		<center><canvas id="canvas" width="600" height="800" style="max-width:100%;background:#000;vertical-align:middle"></canvas></center>
 	</div>
 </div>
