--- a/rope-sling/index.html
+++ b/rope-sling/index.html
@@ -67,7 +67,7 @@ html, body
 <div id="wrapper">
 	<h1 id="title">Rope slinging</h1>
 	<div id="main">
-		<center style="margin-bottom:10px">controls:<br>click and hold <span style="color:blue"><b>LEFT MOUSE<\b><\span> to grapple</center>
+		<center style="margin-bottom:10px">controls:<br>click and hold <span style="color:blue"><b>LEFT MOUSE</b></span> to grapple</center>
 		<center><canvas id="canvas" width="480" height="640" style="max-width:100%;background:#000;vertical-align:middle"></canvas></center>
 	</div>
 </div>
